Fixed bug that caused post excerpt not showing. Added two new fieldtypes. Added support for the Advanced Custom Fields plugin.
git-svn-id: https://plugins.svn.wordpress.org/custom-post-view-generator/trunk@457156 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/cpvg_style.css
+++ b/cpvg_style.css
@@ -200,3 +200,18 @@
 #wpcontent select {
 	height: auto;
 }
+/*DISPLAY LIST STYLE*/
+#cvpg-admin-help ul, #vpg-admin-help ol {
+	border-top: 1px dashed #eee;
+	border-bottom: 1px dashed #eee;
+}
+#cvpg-admin-help ul li {
+	margin: 0 1em;
+	padding: 0.2em;
+	list-style: square inside;
+}
+#cvpg-admin-help ol li {
+	margin: 0 3em;
+	padding: 0.2em;
+	list-style: decimal outside;
+}
